profile-card-component/stylesheets/main.css
html {
  font-size: 10px;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  align-items: center;
  background: url('../images/bg-pattern-top.svg') -672px -672px no-repeat, url('../images/bg-pattern-bottom.svg') calc(100% + 672px) calc(100% + 672px) no-repeat, #19A1AD;
  color: #BBB;
  display: flex;
  flex-direction: column;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 1.5rem;
  line-height: 1.25;
  justify-content: center;
  height: 100vh;
  width: 100vw;
}

@media(min-width: 768px) {
  body {
    background: url('../images/bg-pattern-top.svg') -448px -448px no-repeat, url('../images/bg-pattern-bottom.svg') calc(100% + 488px) calc(100% + 488px) no-repeat, #19A1AD;
  }
}

.c-profile {
  background: white;
  border-radius: 1rem;
  box-shadow: .5rem .5rem 1.5rem .5rem rgba(0,0,0,0.1);
  display: flex;
  flex-direction: column;
  margin-bottom: 4rem;
  max-width: 35rem;
  width: 100%;
}

.c-profile header {
  background: url('../images/bg-pattern-card.svg') center center no-repeat;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  min-height: 13.8rem;
  position: relative;
  text-align: center;
}

.c-profile header img {
  bottom: -4.8rem;
  border-radius: 100%;
  border: .3rem solid white;
  left: calc(50% - 4.8rem);
  position: absolute;
}

.c-profile section {
  font-size: 1.8rem;
  padding: 6.6rem 0 1.6rem;
  text-align: center;
}

.c-profile section h1 {
  font-size: 2rem;
  font-weight: 500;
  line-height: 1.3;
}

.c-profile__location {
  display: block;
}

.c-profile footer {
  align-content: center;
  border-top: .1rem solid #DDD;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 2rem 0;
}

.c-profile .c-social {
  font-size: 1.2rem;
  text-align: center;
}

.c-profile .c-social span {
  display: block;
  font-size: 1.8rem;
}

/****** Utilities ******/
.u-black {
  color: #000;
}

